# mantenibilidad

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  apache.md  check_pulsar.sh  docker-compose.yml  init-topics.sh  pyproject.toml
app/: main.py
app/images_collector/application/dto/: image_dto.py
app/images_collector/application/use_cases/: image_collector.py
app/images_collector/domain/models/: image.py
app/images_collector/domain/ports/: image_repository.py  message_publisher.py
app/images_collector/infrastructure/grpc/: demo.py  server.py
app/images_collector/infrastructure/grpc/protos/: images.proto  images_pb2.py  images_pb2_grpc.py
app/images_collector/infrastructure/http/: dependencies.py  routes.py
app/images_collector/infrastructure/http/controllers/: image_controller.py
app/images_collector/infrastructure/messaging/: consumer-demo.py  create_topic.py  demo.py  pulsar_publisher.py
app/images_collector/infrastructure/repositories/: file_image_repository.py  postgres_image_repository.py  sqlite_image_repository.py
app/images_collector/infrastructure/settings/: config.py
data/postgres/base/1/: 2619  2696  2840  2841  pg_internal.init
data/postgres/base/16384/: 1247  1249  1259  16388  16392  16393  2579  2606  2608  2610  2610_vm  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
data/postgres/base/5/: pg_internal.init
data/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
storage/: images.db
