[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Camilo Lesmes <c.lesmesl@uniandes.edu.co>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email"], version = "2.9.2"}
pydantic-settings = "2.5.2"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "*"
ruff = "*"

[virtualenvs]
in-project = true
package-mode = false